docs/backend/error.txt
C:\Users\bezaw\Downloads\Prajwalan-main\Prajwalan-main\backend\src\services\emailService.js:76
const moment = require('moment-timezone');
      ^

SyntaxError: Identifier 'moment' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1620:18)
    at Module._compile (node:internal/modules/cjs/loader:1662:20)
    at Object..js (node:internal/modules/cjs/loader:1820:10)
    at Module.load (node:internal/modules/cjs/loader:1423:32)
    at Function._load (node:internal/modules/cjs/loader:1246:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1445:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (C:\Users\bezaw\Downloads\Prajwalan-main\Prajwalan-main\backend\src\routes\auth.js:6:39)